# ECS

./: CMakeLists.txt  ECS.h  README  component_factory.cpp  component_factory.h  cposition.cpp  cposition.h  cspeed.cpp  cspeed.h  main.cpp  smovement.cpp  smovement.h  systemfactory.cpp  systemfactory.h
ECS/: component.cpp  component.h  entities.cpp  entities.h  listener.h  system.cpp  system.h  systemmanager.cpp  systemmanager.h
src/ECS/: component.cpp  component.h  entities.cpp  entities.h  entitymanager.cpp  entitymanager.h  system.cpp  system.h  systemmanager.cpp  systemmanager.h
src/examples/: bigger.cpp  bounding.cpp  many_entities.cpp  sfml1.cpp  sfml2.cpp  sfmlfull.cpp  simple.cpp
src/myecs/: cbounds.cpp  cbounds.h  cinput.cpp  cinput.h  component_factory.cpp  component_factory.h  cposition.cpp  cposition.h  csize.h  cspeed.cpp  cspeed.h  sbounds.cpp  sbounds.h  sdraw.cpp  sdraw.h  smovement.cpp  smovement.h  systemfactory.cpp  systemfactory.h
src/myecs/Components/: caction.cpp  caction.h  cbounds.cpp  cbounds.h  cinput.cpp  cinput.h  cposition.cpp  cposition.h  csize.cpp  csize.h  cspeed.h
src/myecs/Systems/: sbounds-sfmlfull.cpp  sbounds.h  sdraw-sfmlfull.cpp  sdraw-sfmlfull.h  sdraw.h  smovement-sfmlfull.cpp  smovement-sfmlfull.h  smovement.cpp  smovement.h
src/tests/: mocks.h  test1.cpp  testSystem.cpp
